5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1834_1278.log
== SUBMITION (2019-07-01 20:26:50) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a=! -1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=x+x
	a=int(input(""))
	b=int(input(""))
print(s)
-- EXECUTION TIME:
0.730603
-- ERROR:
  File "/home/codebench/codes/1834/1278/main.py", line 12
    while(a=! -1):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:26:50) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a=! -1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=x+x
	a=int(input(""))
	b=int(input(""))
print(s)
-- ERROR:
File "XXXX", line 12
    while(a=! -1):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:27:04) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a!= -1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=x+x
	a=int(input(""))
	b=int(input(""))
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:27:47) 
-- CODE:
from numpy import*
a= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a!= -1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=x+x
	a=int(input(""))
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:30:35) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a!= -1 or b!=-1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=x+x
	print(s)
	a=int(input(""))
	b=int(input(""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:31:42) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a!= -1 or b!=-1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=x+x
	print(s)
	a=int(input(""))
	b=int(input(""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:31:57) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a!= -1 or b!=-1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=x+x
	print(s)
	a=int(input(""))
	b=int(input(""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:33:58) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a!= -1 or b!=-1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=s+x
	print(s)
	a=int(input(""))
	b=int(input(""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:34:32) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a!= -1 or b!=-1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=s+x
	
	a=int(input(""))
	b=int(input(""))
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:34:49) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a!= -1 or b!=-1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=s+x
	
	a=int(input(""))
	b=int(input(""))
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:35:18) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a!= -1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=s+x
	
	a=int(input(""))
	b=int(input(""))
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 14:35:48) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a!= -1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=s+x
	
	a=int(input(""))
	b=int(input(""))
print(s)
-- EXECUTION TIME:
1.17467
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 19, in <module>
    b=int(input(""))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:46:34) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a!= -1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=s+x
	
	a=int(input(""))
	b=int(input(""))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:47:05) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a!= -1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=s+x
	
	a=int(input(""))
	b=int(input(""))
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:47:30) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a>-1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=s+x
	
	a=int(input(""))
	b=int(input(""))
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:48:44) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a>-1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=s+x
	
	a=int(input(""))
	b=int(input(""))
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 14:49:39) 
-- CODE:
from numpy import*
a= int(input(""))
b= int(input(""))
matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a>-1):
	i=(a//111)-1
	j=(b//111)-1
	x= matriarca[i,j]
	s=s+x
	
	a=int(input(""))
	b=int(input(""))
print(s)
-- EXECUTION TIME:
1.05762
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 19, in <module>
    b=int(input(""))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:51:32) 
-- CODE:
from numpy import*
a= int(input(""))

matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a>-1 or b>-1):
	i=(a//111)-1
	
	x= matriarca[i,j]
	s=s+x
	
	a=int(input(""))
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:51:44) 
-- CODE:
from numpy import*
a= int(input(""))

matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a>-1 or b>-1):
	i=(a//111)-1
	
	x= matriarca[i,]
	s=s+x
	
	a=int(input(""))
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:52:03) 
-- CODE:
from numpy import*
a= int(input(""))

matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a>-1):
	i=(a//111)-1
	
	x= matriarca[i,]
	s=s+x
	
	a=int(input(""))
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:58:15) 
-- CODE:
from numpy import*
a= int(input(""))

matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a>-1):
	i=(a//111)-1
	
	x= matriarca[i,]
	s=s+x
	
	a=int(input(""))
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:58:49) 
-- CODE:
from numpy import*
a= int(input(""))

matriarca= array([[0,2,11,6,15,11,1],
						[2,0,7,12,4,2,15],
					   [11,7,0,11,8,3,13],
					  	[6,12,11,0,10,2,1],
					  	[15,4,8,10,0,5,13],
					  	[11,2,3,2,5,0,14],
					  	[1,15,13,1,13,14,0]])
s=0
while(a>-1):
	i=(a//111)-1
	
	x= matriarca[i,:]
	s=s+x
	
	a=int(input(""))
	
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
